objects/ASI_CRM_Calculated_FOC__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Calculated FOC</relationshipLabel>
        <relationshipName>Calculated_FOC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Parent of the Child Customer / or itself if it is parent customer</description>
        <label>Customer (Parent)</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Calculated FOC (Customer (Parent))</relationshipLabel>
        <relationshipName>Calculated_FOC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Calculated FOC</relationshipLabel>
        <relationshipName>Calculated_FOC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_Number__c</fullName>
        <formula>VALUE(ASI_CRM_Year__c)*100+ VALUE(  TEXT(ASI_CRM_Month__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Customer_Branch__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_MY_Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Parent_Outlet_ID__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_CN_Parent_Outlet__c</formula>
        <label>Parent Outlet ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Used_By_FOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Used By FOC</label>
        <referenceTo>ASI_FOC_Free_Goods_Request__c</referenceTo>
        <relationshipLabel>Calculated FOC</relationshipLabel>
        <relationshipName>Calculated_FOC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Used_For_FOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used For FOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Calculated FOC</label>
    <listViews>
        <fullName>ASI_CRM_MY_Calculated_FOC</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <label>MY Calculated FOC</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Calculated_FOCTT</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <filters>
            <field>ASI_CRM_Customer__c</field>
            <operation>equals</operation>
            <value>CLUB BILLION KTV (505558)</value>
        </filters>
        <label>MY Calculated FOC Testing</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Calculated_FOC_PAGONI2</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <filters>
            <field>ASI_CRM_Customer__c</field>
            <operation>contains</operation>
            <value>PAGONI</value>
        </filters>
        <label>MY Calculated FOC (PAGONI)</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>MY_Cal_FOC_201504_0327_0426</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <filters>
            <field>ASI_CRM_Month__c</field>
            <operation>equals</operation>
            <value>04</value>
        </filters>
        <filters>
            <field>ASI_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>MY Cal FOC - 201504 (0327 - 0426)</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_BRANCH_ADMIN_EAST_MY</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_IPOH</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_JOHOR_BAHRU</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUALA_LUMPUR</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUANTAN</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_MALACCA</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_PENANG</group>
            <group>ASI_CRM_MY_PowerUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Cal_FOC_201505_0427_0526</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <filters>
            <field>ASI_CRM_Month__c</field>
            <operation>equals</operation>
            <value>05</value>
        </filters>
        <filters>
            <field>ASI_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>MY Cal FOC - 201505 (0427 - 0526)</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_BRANCH_ADMIN_EAST_MY</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_IPOH</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_JOHOR_BAHRU</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUALA_LUMPUR</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUANTAN</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_MALACCA</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_PENANG</group>
            <group>ASI_CRM_MY_PowerUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Cal_FOC_201506</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <filters>
            <field>ASI_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_CRM_Month__c</field>
            <operation>equals</operation>
            <value>06</value>
        </filters>
        <label>MY Cal FOC - 201506</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_BRANCH_ADMIN_EAST_MY</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_IPOH</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_JOHOR_BAHRU</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUALA_LUMPUR</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUANTAN</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_MALACCA</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_PENANG</group>
            <group>ASI_CRM_MY_PowerUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Cal_FOC_201508</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <filters>
            <field>ASI_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_CRM_Month__c</field>
            <operation>equals</operation>
            <value>08</value>
        </filters>
        <label>MY Cal FOC - 201508</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_BRANCH_ADMIN_EAST_MY</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_IPOH</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_JOHOR_BAHRU</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUALA_LUMPUR</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUANTAN</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_MALACCA</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_PENANG</group>
            <group>ASI_CRM_MY_PowerUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Cal_FOC_201605</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <filters>
            <field>ASI_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>ASI_CRM_Month__c</field>
            <operation>equals</operation>
            <value>05</value>
        </filters>
        <label>MY Cal FOC - 201605</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_BRANCH_ADMIN_EAST_MY</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_IPOH</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_JOHOR_BAHRU</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUALA_LUMPUR</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUANTAN</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_MALACCA</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_PENANG</group>
            <group>ASI_CRM_MY_PowerUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Cal_FOC_201606</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <filters>
            <field>ASI_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>ASI_CRM_Month__c</field>
            <operation>equals</operation>
            <value>06</value>
        </filters>
        <label>MY Cal FOC - 201606</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_BRANCH_ADMIN_EAST_MY</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_IPOH</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_JOHOR_BAHRU</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUALA_LUMPUR</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUANTAN</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_MALACCA</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_PENANG</group>
            <group>ASI_CRM_MY_PowerUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Cal_FOC_201607</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <filters>
            <field>ASI_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>ASI_CRM_Month__c</field>
            <operation>equals</operation>
            <value>07</value>
        </filters>
        <label>MY Cal FOC - 201607</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_BRANCH_ADMIN_EAST_MY</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_IPOH</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_JOHOR_BAHRU</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUALA_LUMPUR</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUANTAN</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_MALACCA</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_PENANG</group>
            <group>ASI_CRM_MY_PowerUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Cal_FOC_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <label>MY Cal FOC - All</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_BRANCH_ADMIN_EAST_MY</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_IPOH</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_JOHOR_BAHRU</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUALA_LUMPUR</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUANTAN</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_MALACCA</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_PENANG</group>
            <group>ASI_CRM_MY_PowerUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Cal_FOC_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>MY Cal FOC Created Today</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_BRANCH_ADMIN_EAST_MY</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_IPOH</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_JOHOR_BAHRU</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUALA_LUMPUR</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_KUANTAN</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_MALACCA</group>
            <group>ASI_CRM_MY_BRANCH_ADMIN_PENANG</group>
            <group>ASI_CRM_MY_PowerUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Calculated_FOC_DEBUG_2</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <filters>
            <field>ASI_CRM_Contract__c</field>
            <operation>contains</operation>
            <value>00002221.1</value>
        </filters>
        <label>MY Calculated FOC DEBUG Contract Number</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>MY_Calculated_FOC_SOA</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Customer_Parent__c</columns>
        <columns>ASI_CRM_Parent_Outlet_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Calculated_FOC__c.ASI_CRM_MY_Calculated_FOC</value>
        </filters>
        <filters>
            <field>ASI_CRM_Contract__c</field>
            <operation>equals</operation>
            <value>00001106.1.0</value>
        </filters>
        <label>MY Calculated FOC_SOA</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>F{00000000}</displayFormat>
        <label>Calculated FOC No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculated FOC</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Calculated_FOC</fullName>
        <active>true</active>
        <label>ASI CRM MY Calculated FOC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>